[package]
name = "fractal-api"
version = "0.0.22"
authors = [
    "Iban Eguia <iban@fractal.global>",
    "Eric Remigino <eric@fractal.global>",
]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/FractalGlobal/api-rs"
documentation = "http://fractal.global/api-rs"
description = """
Fractal Global Credits API client library
"""
keywords = ["fractal", "global", "credits", "api"]

[dependencies]
hyper = "^0.9"
chrono = { version = "^0.2", features = ["rustc-serialize"]}
rustc-serialize = "^0.3"
fractal-dto = "^0.0"
fractal-utils = "^0.1"
